--- a/index.html
+++ b/index.html
@@ -1,132 +1,173 @@
 <!doctype html>
 <html lang="en">
 
-	<head>
-		<meta charset="utf-8">
+    <head>
+        <meta charset="utf-8">
 
-		<title>Let's Learn Leaflet.js - Maptime GBG 2016-02-25</title>
+        <title>Let's Learn Leaflet.js - Maptime GBG 2016-02-25</title>
 
-		<meta name="description" content="A framework for easily creating beautiful presentations using HTML">
-		<meta name="author" content="Hakim El Hattab">
+        <meta name="description" content="A framework for easily creating beautiful presentations using HTML">
+        <meta name="author" content="Hakim El Hattab">
 
-		<meta name="apple-mobile-web-app-capable" content="yes">
-		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
 
-		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="css/theme/moon.css" id="theme">
+        <link rel="stylesheet" href="css/reveal.css">
+        <link rel="stylesheet" href="css/theme/moon.css" id="theme">
+        <link rel="stylesheet" href="css/pres.css">
 
-		<!-- Code syntax highlighting -->
-		<link rel="stylesheet" href="lib/css/zenburn.css">
+        <!-- Code syntax highlighting -->
+        <link rel="stylesheet" href="lib/css/zenburn.css">
 
-		<!-- Printing and PDF exports -->
-		<script>
-			var link = document.createElement( 'link' );
-			link.rel = 'stylesheet';
-			link.type = 'text/css';
-			link.href = window.location.search.match( /print-pdf/gi ) ? 'css/print/pdf.css' : 'css/print/paper.css';
-			document.getElementsByTagName( 'head' )[0].appendChild( link );
-		</script>
+        <!-- Printing and PDF exports -->
+        <script>
+            var link = document.createElement( 'link' );
+            link.rel = 'stylesheet';
+            link.type = 'text/css';
+            link.href = window.location.search.match( /print-pdf/gi ) ? 'css/print/pdf.css' : 'css/print/paper.css';
+            document.getElementsByTagName( 'head' )[0].appendChild( link );
+        </script>
 
-		<!--[if lt IE 9]>
-		<script src="lib/js/html5shiv.js"></script>
-		<![endif]-->
-	</head>
+        <!--[if lt IE 9]>
+        <script src="lib/js/html5shiv.js"></script>
+        <![endif]-->
+    </head>
 
-	<body>
+    <body>
 
-		<div class="reveal">
+        <div class="reveal">
 
-			<!-- Any section element inside of this container is displayed as a slide -->
-			<div class="slides">
-				<section>
-					<h1>Let's Learn <a href="http://leafletjs.com/">Leaflet.js</a>!</h1>
+            <!-- Any section element inside of this container is displayed as a slide -->
+            <div class="slides">
+                <section>
+                    <h1>Let's Learn <a href="http://leafletjs.com/">Leaflet.js</a>!</h1>
 
-					<p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
+                    <p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
 
-					<p>Per Liedman, Dotnet Mentor</p>
+                    <p>Per Liedman, Dotnet Mentor</p>
 
-					<aside class="notes">
-						I will assume some knowledge of HTML, JavaScript and object oriented
-						programming.
-					</aside>
-				</section>
-				<section>
-					<aside class="notes">
-						Comparison to Google Maps:
-						Google Maps is a complete package: it's
-						map data, satellite imagery, streetview imagery
-						AND a JavaScript API.
+                    <aside class="notes">
+                        I will assume some knowledge of HTML, JavaScript and object oriented
+                        programming.
+                    </aside>
+                </section>
+                <section>
+                    <aside class="notes">
+                        Comparison to Google Maps:
+                        Google Maps is a complete package: it's
+                        map data, satellite imagery, streetview imagery
+                        AND a JavaScript API.
 
-						Leaflet is a JavaScript API, you choose data sources
-						yourself.
-					</aside>
-				</section>
-				<section>
-					<h1>Let's dive in...</h1>
-				</section>
-				<section>
+                        Leaflet is a JavaScript API, you choose data sources
+                        yourself.
+                    </aside>
+                </section>
+                <section>
+                    <h1>Let's dive in...</h1>
+                </section>
+                <section>
+                    <pre class="stretch highlight html">
+&lt;html&gt;
+  &lt;head&gt;
+<span class="fragment zoom-in highlight-current-green">    &lt;link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" /&gt;</span>
+<span class="fragment zoom-in highlight-current-green">    &lt;script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"&gt;&lt;/script&gt;</span>
+  &lt;/head&gt;
+  &lt;body&gt;
+<span class="fragment zoom-in highlight-current-green">    &lt;div id="map"&gt;
+    &lt;/div&gt;</span>
+  &lt;/body&gt;
+&lt;/html&gt;
+                        </code>
+                    </pre>
+                </section>
+                <section>
+                    <pre class="stretch highlight html">
+&lt;html&gt;
+  &lt;head&gt;
+    &lt;link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" /&gt;
+    &lt;script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"&gt;&lt;/script&gt;
+<span class="fragment zoom-in highlight-current-green">    &lt;style&gt;
+      body {
+        padding: 0;
+        margin: 0;
+      }
+      #map {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+      }
+    &lt;/style&gt;</span>
+  &lt;/head&gt;
+  &lt;body&gt;
+    &lt;div id="map"&gt;
+    &lt;/div&gt;
+  &lt;/body&gt;
+&lt;/html&gt;
+                        </code>
+                    </pre>
+                </section>
+                <section>
+                    <aside class="notes">
+                        X Prerequisites
+                            * HTML
+                            * JavaScript
+                            * Object oriented programming
+                        * What is Leaflet
+                        * Map
+                            * Container
+                            * Factory functions vs. constructors
+                        * Layers
+                        * Baselayer, background layer
+                            * static, things that don't change
+                            * also, something you (usually) share with lots of other apps (agnostic)
+                        * Overlays (vector)
+                            * things that change
+                            * examples of vector types (point, polyline, polygon, circle)
+                            * your app-specific data
+                            * Coordinates (lat/lng)
+                        * Markers, popups
+                        * GeoJSON
+                        * Interactions, events
+                        * Plugins
+                        * Leaflet Underneath
+                    </aside>
+                </section>
 
-				</section>
-				<section>
-					<aside class="notes">
-						X Prerequisites
-							* HTML
-							* JavaScript
-							* Object oriented programming
-						* What is Leaflet
-						* Map
-							* Container
-							* Factory functions vs. constructors
-						* Layers
-						* Baselayer, background layer
-							* static, things that don't change
-							* also, something you (usually) share with lots of other apps (agnostic)
-						* Overlays (vector)
-							* things that change
-							* examples of vector types (point, polyline, polygon, circle)
-							* your app-specific data
-							* Coordinates (lat/lng)
-						* Markers, popups
-						* GeoJSON
-						* Interactions, events
-						* Plugins
-						* Leaflet Underneath
-					</aside>
-				</section>
+            </div>
 
-			</div>
+        </div>
 
-		</div>
+        <script src="lib/js/head.min.js"></script>
+        <script src="js/reveal.js"></script>
 
-		<script src="lib/js/head.min.js"></script>
-		<script src="js/reveal.js"></script>
+        <script>
 
-		<script>
+            // Full list of configuration options available at:
+            // https://github.com/hakimel/reveal.js#configuration
+            Reveal.initialize({
+                controls: true,
+                progress: true,
+                history: true,
+                center: true,
 
-			// Full list of configuration options available at:
-			// https://github.com/hakimel/reveal.js#configuration
-			Reveal.initialize({
-				controls: true,
-				progress: true,
-				history: true,
-				center: true,
+                transition: 'slide', // none/fade/slide/convex/concave/zoom
 
-				transition: 'slide', // none/fade/slide/convex/concave/zoom
+                // Optional reveal.js plugins
+                dependencies: [
+                    { src: 'lib/js/classList.js', condition: function() { return !document.body.classList; } },
+                    { src: 'plugin/highlight/highlight.js', async: true, callback: function() {
+                        [].forEach.call( document.querySelectorAll( '.highlight' ), function( v, i) {
+                            hljs.highlightBlock(v);
+                        });
+                    } },
+                    { src: 'plugin/zoom-js/zoom.js', async: true },
+                    { src: 'plugin/notes/notes.js', async: true }
+                ]
+            });
 
-				// Optional reveal.js plugins
-				dependencies: [
-					{ src: 'lib/js/classList.js', condition: function() { return !document.body.classList; } },
-					{ src: 'plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
-					{ src: 'plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
-					{ src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
-					{ src: 'plugin/zoom-js/zoom.js', async: true },
-					{ src: 'plugin/notes/notes.js', async: true }
-				]
-			});
+        </script>
 
-		</script>
-
-	</body>
+    </body>
 </html>
